--- a/.deployment/docker-compose.production-template.yml
+++ b/.deployment/docker-compose.production-template.yml
@@ -32,7 +32,7 @@ services:
       MERCURE_JWT_SECRET: "__LLUNIOSTUDIOS_MERCURE_JWT_SECRET__"
       APP_SECRET: "__LLUNIOSTUDIOS_APP_SECRET__"
       MAILER_DSN: "__LLUNIOSTUDIOS_MAILER_DSN__"
-      MESSENGER_TRANSPORT_DSN: "__LLUNIOSTUDIOS_MESSENGER_TRANSPORT_DSN__"
+      MESSENGER_TRANSPORT_DSN: "doctrine://default?auto_setup=0"
       APP_UNDER_MAINTENANCE: "__LLUNIOSTUDIOS_APP_UNDER_MAINTENANCE__"
     networks:
       - internal
